# dcm

./: .gitignore  .gitmodules  CMakeLists.txt  build_mingw.bat  build_vs_2015_32.bat  build_vs_2015_64.bat  build_vs_2017.bat  build_vs_2017_32.bat  build_vs_2017_64.bat  build_vs_2017_clang.bat  build_vs_2019_64.bat  init_project.bat  set_path.bat
modules/Dicom/: CMakeLists.txt
modules/Dicom/include/Dicom/: Parser.h  Tag.h  TagValues.h  TagValues.inl  Tags.h  Util.h  Util.inl  Vr.h  dict.h
modules/Dicom/include/Dicom/TagStruct/: ArrayValue.h  ParseConfig.h  ParseHelpers.h  SingleValue.h  SortedTagList.h  TagDesc.h  TagNum.h  TagValueBasic.h  Vr.h
modules/Dicom/include/Util/: CastValue.h  CastValue.inl  MVector.h  Stream.h  Stream.inl  StreamFile.h  StreamImplT.h  StreamMem.h  buffer_view.h  optional.h  string_util.h
modules/Dicom/src/: Parser.cpp  Stream.cpp  Tag.cpp  TagNum.cpp  TagValueBasic.cpp  TagValues.cpp  Vr.cpp  dict.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/DicomTest/: CMakeLists.txt
tests/DicomTest/src/: CastValueTests.cpp  MVectorTests.cpp
tests/DicomTest/src/TagStruct/: ParseHelpers_tests.cpp
tests/gtest/: CMakeLists.txt  CMakeLists.txt.in
tool/: dict_gen.py
